--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "drupal/core-composer-scaffold": "^9.1",
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
+        "drupal/migrate_plus": "^5.1",
+        "drupal/migrate_tools": "^5.0",
+        "drupal/migrate_upgrade": "^3",
         "drush/drush": "^10.3"
     },
     "conflict": {
